Fixed issue where View would be blurry on mobile devices

--- a/src/components/View/styles.less
+++ b/src/components/View/styles.less
@@ -1,6 +1,5 @@
-.uiView {
+.view {
    background: #fff;
-   perspective: 1000;
 
    &.autoFormat {
       position: absolute;
